tests/neg/param-opt.stk
param newLine: Bool = 3  // error

fun printOpt(s: String): Unit =
  print s
  if newLine then print "\n"

fun main =
  printOpt "hello "
  printOpt "world!" with newLine = true
